--- a/doc/dissertation/dissertation.tex
+++ b/doc/dissertation/dissertation.tex
@@ -66,6 +66,6 @@
 \let\oldbibitem\bibitem
 \renewcommand{\bibitem}{\setlength{\itemsep}{0pt}\oldbibitem}
 \include{bibliography}
-%\include{appendices}
+\include{appendices}
 
 \end{document}
