little work on dissertation

--- a/doc/dissertation/acknowledgements.tex
+++ b/doc/dissertation/acknowledgements.tex
@@ -1,24 +1,13 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-%  New template code for TAMU Theses and Dissertations starting Fall 2012.  
-%  For more info about this template or the 
-%  TAMU LaTeX User's Group, see http://www.howdy.me/.
-%
-%  Author: Wendy Lynn Turner 
-%	 Version 1.0 
-%  Last updated 8/5/2012
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%                           ACKNOWLEDGEMENTS
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter*{ACKNOWLEDGEMENTS}
-\addcontentsline{toc}{chapter}{ACKNOWLEDGEMENTS}  % Needs to be set to part, so the TOC doesnt add 'CHAPTER ' prefix in the TOC.
-
+% Needs to be set to part, so the TOC doesnt add 'CHAPTER ' prefix in the TOC.
+\addcontentsline{toc}{chapter}{ACKNOWLEDGEMENTS}  
 
 \indent Acknowledgements will go here.
-
+Dr. Ragusa
+Dr. Guermond
+Marco
+Dr. Kuzmin?
+Dr. Popov?
+deal.ii?
 
 \pagebreak{}
