--- a/doc/dissertation/content/appendices/appendices.tex
+++ b/doc/dissertation/content/appendices/appendices.tex
@@ -14,7 +14,7 @@
 \titleformat{\chapter}{\centering\normalsize}{APPENDIX \thechapter}{0em}{\vskip .5\baselineskip\centering}
 \renewcommand{\appendixname}{APPENDIX}
 
-\input{appendix1}
+\input{content/appendices/appendix1}
 %\input{appendix2}
 
 \end{appendices}
