--- a/doc/dissertation/content/newestcommands.tex
+++ b/doc/dissertation/content/newestcommands.tex
@@ -251,3 +251,6 @@
     \begin{tabular}
     {#3}\hline #4\\\hline}
   {\hline\end{tabular}\end{center}\end{table}}
+
+% references commands
+\newcommand{\refsec}[1]{, \S#1}
