--- a/doc/dissertation/content/introduction/purpose.tex
+++ b/doc/dissertation/content/introduction/purpose.tex
@@ -12,18 +12,32 @@ these results may lead to poor design choices, which can pose serious safety
 risks when a design is implemented.
 
 These issues of spurious oscillations and negativities are a well-known
-phenomenon in the simulation of hyperbolic partial differential equations,
+phenomenon in the simulation of hyperbolic partial differential equations (PDEs),
 for example, linear advection, Burger's equation, the inviscid Euler equations
 of gas dynamics, and the shallow water (or Saint-Venant) equations.
-These PDEs result from taking the differential form of the corresponding integral
-conservation law equations; however, the differential forms of these equations
-are not physically correct - they do not hold in the differential case
-because they break down in the presence of a discontinuity.
-Moreover, some physics is omitted in these models, such as the
-lack of an entropy condition.
-The mathematical formulations for these problems
-do not always guarantee a unique solution; this is a manifestation of the
-neglect of physics in the underlying PDE model.
+These PDEs result from manipulating the corresponding integral
+conservation law equations; however, these manipulations are only valid when
+the solution is smooth - in the presence of shocks, the PDE form breaks down
+\cite{leveque2002}\refsec{11.6}. Thus it becomes necessary to work with
+these equations in a weak form, which holds in the presence of shocks.
+However, the mathematical formulations for these problems
+do not necessarily yield unique weak solutions; this is a manifestation of the
+neglect of physics in the underlying hyperbolic PDE model
+\cite{leveque2002}\refsec{11.13}.
 
 Attempts to address these issues have taken a number
 of different approaches for different discretization schemes.
+
+To produce a unique, physically meaningful solution, it is necessary to
+enforce additional conditions, often called \emph{admissibility conditions}
+or \emph{entropy conditions}, which filter out spurious weak solutions,
+leaving only the physical, \emph{entropy-satisfying} weak solution
+\cite{leveque2002}\refsec{11.13}.
+There are a number of entropy conditions that may be applied: some
+examples are the Lax entropy condition and the Oleinik entropy
+condition\cite{leveque2002}\refsec{11.13}; however, it can be impractical
+to apply these conditions in a numerical simulation. The research in this
+dissertation employs the notion of an entropy-based artificial viscosity,
+based on the recent work of Guermond et al.\cite{guermond_ev}.
+The notion of entropy stems from
+thermodynamics, in which entropy is a non-decreasing function of time.
