worked on results for dissertation and added timer

--- a/doc/dissertation/content/results/transport/prelimiting_void_to_absorber/description.tex
+++ b/doc/dissertation/content/results/transport/prelimiting_void_to_absorber/description.tex
@@ -39,11 +39,10 @@ CFL Number & $\nu = 0.8$\\
 %-------------------------------------------------------------------------------
 \begin{figure}[ht]
    \centering
-   \includegraphics[width=\textwidth]{prelimiting_void_to_absorber/prelimiting.pdf}
+   \includegraphics[width=\textwidth]
+     {\contentdir/results/transport/prelimiting_void_to_absorber/prelimiting.pdf}
    \caption{Effect of Prelimiting on the Formation of Spurious Plateaus
       in the Void-to-Absorber Test Problem}
    \label{fig:prelimiting_void_to_absorber}
 \end{figure}
 %-------------------------------------------------------------------------------
-\subsection{Code and Version}
-MATLAB code, git commit hash c26faed531cde63ae8c80d693ea6f1998b1b5102
