--- a/doc/dissertation/content/results/transport/source_void_to_absorber/description.tex
+++ b/doc/dissertation/content/results/transport/source_void_to_absorber/description.tex
@@ -1,5 +1,3 @@
-\section{Source-Void-to-Absorber Test Problem}
-
 In this section, results are presented for the
 source-void-to-absorber test problem
 described in Section \ref{sec:source_void_to_absorber}.
@@ -29,18 +27,18 @@ Entropy Time Integrator & BE\\
 \end{table}
 %-------------------------------------------------------------------------------
 \begin{figure}[ht]
-   \includegraphics[width=\textwidth]{source_void_to_absorber/coarse.pdf}
+   \includegraphics[width=\textwidth]
+     {\contentdir/results/transport/source_void_to_absorber/coarse.pdf}
    \caption{Comparison of Solutions for Source-Void-to-Absorber Problem
      with $2^5$ Cells}
    \label{fig:source_void_to_absorber}
 \end{figure}
 %-------------------------------------------------------------------------------
 \begin{figure}[ht]
-   \includegraphics[width=\textwidth]{source_void_to_absorber/fine.pdf}
+   \includegraphics[width=\textwidth]
+     {\contentdir/results/transport/source_void_to_absorber/fine.pdf}
    \caption{Comparison of Solutions for Source-Void-to-Absorber Problem
      with $2^8$ Cells}
    \label{fig:source_void_to_absorber_fine}
 \end{figure}
 %-------------------------------------------------------------------------------
-\subsection{Code and Version}
-Deal.ii code, git commit hash 1bca86bffd5cab926ed3410347bfc7478a18ce8f
