--- a/doc/README
+++ b/doc/README
@@ -2,10 +2,9 @@
 
 ./meetings/      contains records of meetings
 
-./notes/         contains observations and methodology content from dissertation
-                 in a more pleasing format
+./misc/          contains miscellaneous notes
+
+./notes/         contains *.tex file and template to produce notes in a
+                 non-dissertation format
 
 ./presentations/ contains various presentations/posters made
-
-./results/       contains results content from dissertation but in
-                 a more pleasing format
