--- a/doc/dissertation/chapter3.tex
+++ b/doc/dissertation/chapter3.tex
@@ -7,8 +7,16 @@
 %===============================================================================
 \section{Scalar Transport\label{sec:transport_results}}
 %===============================================================================
-\subsection{Problem 1}
-  \input{content/results/transport/problem1}
+\subsection{Void-to-Absorber Test Problem\label{sec:void_to_absorber}}
+  \input{content/results/transport/void_to_absorber/description}
+\subsection{Skew Void-to-Absorber Test Problem\label{sec:skew_void_to_absorber}}
+  \input{content/results/transport/skew_void_to_absorber/description}
+\subsection{Source Void-to-Absorber Test Problem\label{sec:source_void_to_absorber}}
+  \input{content/results/transport/source_void_to_absorber/description}
+\subsection{Multi-Region Test Problem\label{sec:multi_region}}
+  \input{content/results/transport/multi_region/description}
+\subsection{Three-Region Test Problem\label{sec:three_region}}
+  \input{content/results/transport/three_region/description}
 %===============================================================================
 \section{The Shallow Water Equations\label{sec:shallow_water_results}}
 %===============================================================================
