started writing up doc on max flux speed

--- a/doc/dissertation/content/newestcommands.tex
+++ b/doc/dissertation/content/newestcommands.tex
@@ -179,6 +179,11 @@
 \newcommand{\gravity}{g}
 \newcommand{\speedofsound}{a}
 
+% Riemann solvers
+\newcommand{\shockspeed}{S}
+\newcommand{\wavespeed}{\lambda}
+\newcommand{\maxwavespeed}{\wavespeed_{\text{max}}}
+
 %==============================================================================
 % colors
 \colorlet{lightBlue}{blue!20!white}
